--- a/dono.html
+++ b/dono.html
@@ -30,7 +30,7 @@
                                            <a href="klasifikimi.html">Klasifikimi</a>
                                            </li>
                                             <li>
-                                           <a href="seanca.html">Lë seancë!</a>
+                                           <a href="seanca.html">Cakto një termin!</a>
                                       </li>
                                       <li>
                                            <a href="dono.html" class="dono">DONO!</a>
