--- a/klasifikimi.html
+++ b/klasifikimi.html
@@ -30,7 +30,7 @@
                                            <a href="klasifikimi.html" class="faqja-e-hapur">Klasifikimi</a>
                                            </li>
                                             <li>
-                                           <a href="seanca.html">Lë seancë!</a>
+                                           <a href="seanca.html">Cakto një termin!</a>
                                       </li>
                                       <li>
                                            <a href="dono.html" class="dono">DONO!</a>
