--- a/ballina.html
+++ b/ballina.html
@@ -46,7 +46,7 @@
                                            <a href="klasifikimi.html">Klasifikimi</a>
                                            </li>
                                             <li>
-                                           <a href="seanca.html">Cakto një termin!</a>
+                                           <a href="seanca.html">Cakto një takim!</a>
                                       </li>
                                       <li>
                                            <a href="dono.html" class="dono">DONO!</a>
