--- a/seanca.html
+++ b/seanca.html
@@ -50,38 +50,38 @@
                   <th>Luljeta Kabashi</th>
                </tr>
                <tr>
-                  <td>E hënë</td>
+                  <td><b> E hënë</b></td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                </tr>
                <tr>
-                  <td>E martë</td>
+                  <td><b>E martë</b></td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                </tr> <tr>
-                  <td>E mërkurë</td>
+                  <td><b>E mërkurë</b></td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                </tr> <tr>
-                  <td>E enjte</td>
+                  <td><b>E enjte</b></td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                </tr> <tr>
-                  <td>E premte</td>
+                  <td><b>E premte</b></td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                </tr> <tr>
-                  <td>E shtunë</td>
+                  <td><b>E shtunë</b></td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
