--- a/dono.html
+++ b/dono.html
@@ -106,7 +106,8 @@ textarea {
                <label for="fname">Shkruani numrin e xhirollogarisë:</label>
                <br>
                <input type="text" name="firstname" id="fname" placeholder="Nr. e xhirollogarisë.." style="width:250px;">
-                   <br>
+      
+               <br>
                    <label for="lname">Shkruani PIN-in e kartelës:</label>
                <br>
                
@@ -115,13 +116,29 @@ textarea {
                <label for="lname">Shkruani shumën që doni të dononi:</label>
                <br>
                <input type="text" name="lname" id="lname" placeholder="" style="width:250px;" >
+               <form>
+                  <BR><BR>
+  <input type="checkbox"  name="grup1" value="1">
+  <label for="grup1"> PARA SE FËMIJA TË FILLOJ TË FLAS</label><br><BR>
+  <input type="checkbox"  name="grup2" value="2">
+  <label for="grup2"> PËR FËMIJËN</label><br><BR>
+  <input type="checkbox"  name="grup3" value="3">
+  <label for="grup3"> PËR TË MOSHUARIT</label>
+  <br><br>
+  
+</form>
+
                 <br>
-               <button type="submit" class="dergo">Dono!</button>
+              <button type="submit" class="dergo">Dono!</button>
    
            </form>
            </center> 
        </div>
    
+       <dl>
+          <dt>Donimi juaj</dt>
+          <dd> do te dhurohet per nevoja te veqanta!</dd>
+       </dl>
  
 
                      <div class="pjesa-fundit">
@@ -140,16 +157,20 @@ textarea {
 
 
 <div class="pjesa-fundit-kontakti">
-   <h3 >Kontakti </h3>
-   
    <br>
-<a href="#" class="kontakti "><pre>Email :     </pre><ion-icon name="mail-outline"></ion-icon > emri.mbiemri@gmail.com</a>
+   <br>
+   <h3 >Kontakti </h3>
+   <address>
+   <br>
+<a href="fiek@uni-pr.edu" class="kontakti " target="_blank"><pre>Email :     </pre><ion-icon name="mail-outline"></ion-icon > emri.mbiemri@gmail.com</a>
    
    <br>
 <a href="#" class="kontakti "> <pre>Adresa :     </pre><ion-icon name="location-outline"></ion-icon >Bregu i Diellit, 10000 Prishtinë, Republika e Kosovës</a>
    
    <br>
-<a href="#" class="kontakti "><pre>Nr. tel. :     </pre> <ion-icon name="call-outline"></ion-icon >+383 4* *** ***</a>
+<a href="#" class="kontakti "><pre><abbr title="Numri i telefonit"> Nr. Tel.</abbr>  :     </pre> <ion-icon name="call-outline"></ion-icon >+383 4* *** ***</a>
+</address>
+
 </div>
 
 <div class="pjesa-fundit-foto">
