--- a/seanca.html
+++ b/seanca.html
@@ -41,6 +41,7 @@
            </header>
            <div class="pjesa-pare-takimi">
            <div class="takimi-orari">
+              <u><b style="font-size: 25px; ">Orari i punës<br></b></u><br><br>
             <table class="tabela" border="1">
                <tr>
                   <th></th>
@@ -50,38 +51,38 @@
                   <th>Luljeta Kabashi</th>
                </tr>
                <tr>
-                  <td><b> E hënë</b></td>
+                  <td>E hënë</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                </tr>
                <tr>
-                  <td><b>E martë</b></td>
+                  <td>E martë</td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                </tr> <tr>
-                  <td><b>E mërkurë</b></td>
+                  <td>E mërkurë</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                </tr> <tr>
-                  <td><b>E enjte</b></td>
+                  <td>E enjte</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                </tr> <tr>
-                  <td><b>E premte</b></td>
+                  <td>E premte</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
                   <td>13:00-16:00</td>
                   <td>---</td>
                </tr> <tr>
-                  <td><b>E shtunë</b></td>
+                  <td>E shtunë</td>
                   <td>---</td>
                   <td>09:00-12:00</td>
                   <td>---</td>
@@ -93,7 +94,7 @@
 
 
        <div class="takimi10">
-     <h1>Cakto një <b class="titulli">takim!</b></h1>
+     <h1 style="text-align: center;">Cakto një <span style="color: rgb(6, 6, 36)">takim!</span></h1>
      <div class="butonatetakimit">
      <input type="text" placeholder="Shkruani emrin dhe mbiemri" class="emri"> 
      <input type="email" placeholder="Shkruani Email-in" class="emri">
@@ -138,6 +139,18 @@
          </select>
      </div>
      <div class="butonatetakimit">
+      <form style="margin-left: 50px;"> 
+
+                 
+  <input type="radio"  name="grup1" value="1" >
+  <label for="grup1" style="margin-right: 40px;"> F</label> 
+  <input type="radio"  name="grup2" value="2"> <label for="grup2"> M</label>
+  
+  <br><br>
+  
+</form>
+</div>
+     <div class="butonatetakimit">
      <input type="text" placeholder="Mesazhi" class="mesazhi">
      </div>
      <div class="butonatetakimit" style="margin-left: 30%;">
@@ -167,6 +180,8 @@
 
 
 <div class="pjesa-fundit-kontakti">
+   <br>
+   <br>
    <h3 >Kontakti </h3>
    
    <br>
