--- a/clogopedia.html
+++ b/clogopedia.html
@@ -65,13 +65,14 @@ mund të përdoret gjithashtu në mënyrë parandaluese. Nëpërmjet ekzaminimit
 shkollat ​​fillore dhe grupet e lojërave, çrregullimet e mundshme identifikohen në një 
 fazë të hershme. Në këtë mënyrë ato mund të trajtohen në kohë.
                
-Fjala "terapia e të folurit" vjen nga fjalët greke "logos" dhe "paidein". "Logos" do të 
+Fjala "terapia e të folurit" vjen nga fjalët greke <mark>"logos" </mark>dhe <mark>"paidein"</mark>. "Logos" do të 
 thotë diçka si "fjalë e folur" dhe "paidein" do të thotë "të edukosh". Kuptimi pastaj 
 zbret në 'edukim në fjalën e folur'. Një term i zakonshëm i përdorur për këtë në të
 kaluarën është 'mësues i të folurit'.
 </pre>
 
    </div>
+
 
      <div class="foto-pare">
            <img src="fotot/foto1.jpg" width="560px" height="auto" style="padding-left: 96px;padding-top: 97px;">
@@ -85,7 +86,7 @@ kaluarën është 'mësues i të folurit'.
         KUR ËSHTË E NEVOJSHME TERAPIA E TË FOLURIT?<br>
      </H1>
      <P class="pjesa-dyte"> <br>
-Çdo pacient mund të përjetojë një ankesë ndryshe, asnjë ankesë nuk është e njëjtë. Pra, së pari
+Çdo pacient  mund të përjetojë një ankesë ndryshe,asnjë ankesë nuk është e njëjtë. Pra, së pari
 shikohet serioziteti i ankesës. Sa dhimbje përjeton
 pacienti. Kjo mund të jetë e ndryshme në të gjitha rastet. Për shembull, me probleme
 me zërin, ndodhin ankesa të tjera sesa me gjuhën 
@@ -183,6 +184,8 @@ komunikues fillon shumë përpara se të thuhen fjalët e para. Prandaj shoqëro
 
 
 <div class="pjesa-fundit-kontakti">
+   <br>
+   <br>
    <h3 >Kontakti </h3>
    
    <br>
