--- a/dono.html
+++ b/dono.html
@@ -121,7 +121,7 @@ textarea {
   <input type="checkbox"  name="grup1" value="1">
   <label for="grup1"> PARA SE FËMIJA TË FILLOJ TË FLAS</label><br><BR>
   <input type="checkbox"  name="grup2" value="2">
-  <label for="grup2"> PËR FËMIJËN</label><br><BR>
+  <label for="grup2"> PËR FËMIJËT</label><br><BR>
   <input type="checkbox"  name="grup3" value="3">
   <label for="grup3"> PËR TË MOSHUARIT</label>
   <br><br>
@@ -137,7 +137,7 @@ textarea {
    
        <dl>
           <dt>Donimi juaj</dt>
-          <dd> do te dhurohet per nevoja te veqanta!</dd>
+          <dd> do të dhurohet për persona më nevoja të veçanta!</dd>
        </dl>
  
 
