--- a/dono.html
+++ b/dono.html
@@ -116,6 +116,10 @@ textarea {
                <label for="lname">Shkruani shumën që doni të dononi:</label>
                <br>
                <input type="text" name="lname" id="lname" placeholder="" style="width:250px;" >
+               <br>
+               <label for="lname">Zgjedhni grup-moshën për të cilën dëshironi të dononi:</label>
+           <br>
+               
                <form>
                   <BR><BR>
   <input type="checkbox"  name="grup1" value="1">
