--- a/seanca.html
+++ b/seanca.html
@@ -141,11 +141,13 @@
      <div class="butonatetakimit">
       <form style="margin-left: 50px;"> 
 
-                 
+   <p><i>Zgjedhni grup-moshën për të cilën do të bëni takimin:</i></p>    <br><br>
   <input type="radio"  name="grup1" value="1" >
-  <label for="grup1" style="margin-right: 40px;"> F</label> 
-  <input type="radio"  name="grup2" value="2"> <label for="grup2"> M</label>
-  
+  <label for="grup1" style="margin-right: 60px;">Para së fëmija të filloj të flas</label> 
+  <input type="radio"  name="grup2" value="2"> 
+  <label for="grup2">Për fëmijët</label>
+  <input type="radio"  name="grup3" style="margin-left:50px; value="3" >
+  <label for="grup3" > Për të moshuarit</label> 
   <br><br>
   
 </form>
