--- a/seanca.html
+++ b/seanca.html
@@ -143,12 +143,12 @@
       <form style="margin-left: 50px;"> 
 
    <p><i>Zgjedhni grup-moshën për të cilën do të bëni takimin:</i></p>    <br><br>
-  <input type="radio"  name="grup1" value="1" >
-  <label for="grup1" style="margin-right: 60px;">Para së fëmija të filloj të flas</label> 
-  <input type="radio"  name="grup2" value="2"> 
-  <label for="grup2">Për fëmijët</label>
-  <input type="radio"  name="grup3" style="margin-left:50px; value="3" >
-  <label for="grup3" > Për të moshuarit</label> 
+  <input type="radio"  name="grup" value="1" >
+  <label for="grup" style="margin-right: 60px;">Para së fëmija të filloj të flas</label> 
+  <input type="radio"  name="grup" value="2"> 
+  <label for="grup">Për fëmijët</label>
+  <input type="radio"  name="grup" style="margin-left:50px; value="3" >
+  <label for="grup" > Për të moshuarit</label> 
   <br><br>
   
 </form>
