--- a/dono.html
+++ b/dono.html
@@ -11,46 +11,32 @@
       input[type=text],
 select,
 textarea {
-
+   
    width: 100%;
 
    padding: 10px;
 
    border: 1px solid #ccc;
-
+   background-origin: border-box;
    border-radius: 4px;
-
    box-sizing: border-box;
-
    margin-top: 6px;
-
    margin-bottom: 16px;
-
    resize: horizontal;
-
    text-align: center;
 
 }
 input[type=password],
 select,
 textarea {
-
    width: 100%;
-
    padding: 10px;
-
    border: 1px solid #ccc;
-
    border-radius: 4px;
-
    box-sizing: border-box;
-
    margin-top: 6px;
-
    margin-bottom: 16px;
-
    resize: horizontal;
-
    text-align: center;
 
 }
