--- a/ballina.html
+++ b/ballina.html
@@ -62,7 +62,29 @@
       <p class="thenja" ><i style="color: rgb(9, 9, 87);"> Më shumë se sa fjalë, është zëri i dikujt!</i></p>
 
 </div>
-               
+<div class="w3-content w3-section" style="max-width:1000px">
+   <img class="mySlides" src="nje.jpg" style="width:105%">
+   <img class="mySlides" src="dy.jpg" style="width:95%">
+   <img class="mySlides" src="tre.jpg" style="width:86%">
+  <img class="mySlides" src="kater.jpg" style="width:88%">
+  <img class="mySlides" src="pese.jpg" style="width:103%">
+</div>
+       <script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+var i;
+var x = document.getElementsByClassName("mySlides");
+for (i = 0; i < x.length; i++) {
+  x[i].style.display = "none";  
+}
+myIndex++;
+if (myIndex > x.length) {myIndex = 1}    
+x[myIndex-1].style.display = "block";  
+setTimeout(carousel, 3000); // Change image every 6 seconds
+}
+</script>
 
 <div class="pjesa-fundit">
    
