--- a/clogopedia.html
+++ b/clogopedia.html
@@ -92,7 +92,12 @@ kaluarën është 'mësues i të folurit'.
              <li>AFAZIA DHE DISARTRIA</li>
             </ul>
             </P>
-     
+            <center>
+            <iframe width="560" height="315" src="https://youtu.be/-ErOZJOOfJY" frameborder="0" 
+             allowfullscreen >
+               Video 1
+            </iframe>
+         </center>
      <H1 style="font-size: 23px;padding-left: 100px; color: rgb(36, 94, 29);">
         KUR ËSHTË E NEVOJSHME TERAPIA E TË FOLURIT?<br>
      </H1>
