--- a/clogopedia.html
+++ b/clogopedia.html
@@ -75,7 +75,7 @@ kaluarën është 'mësues i të folurit'.
 
 
      <div class="foto-pare">
-      <iframe width="560" height="315" src="video1.mp4" frameborder="0" 
+      <iframe width="560" height="315" src="fotot/video1.mp4" frameborder="0" 
       allowfullscreen >
         Video 1
      </iframe>
@@ -96,7 +96,7 @@ kaluarën është 'mësues i të folurit'.
             </ul>
             </P>
             <center>
-            <iframe width="560" height="315" src="video2.mp4" frameborder="0" 
+            <iframe width="560" height="315" src="fotot/video2.mp4" frameborder="0" 
              allowfullscreen >
                Video 1
             </iframe>
@@ -124,11 +124,11 @@ komunikimit në kuptimin e gjerë të fjalës.
       
       <audio controls style="margin-left:5%;">
        
-         <source src="audio1.mp3" type="audio/mpeg">
+         <source src="fotot/audio1.mp3" type="audio/mpeg">
        Your browser does not support the audio element.
        </audio>
        <audio controls>
-         <source src="audio1.mp3" type="audio/mpeg">
+         <source src="fotot/audio2.mp3" type="audio/mpeg">
        Your browser does not support the audio element.
        </audio>
      <br><br>
