--- a/klasifikimi.html
+++ b/klasifikimi.html
@@ -63,7 +63,7 @@
            <h4 style="text-align: center; font-size: 30px;"> Galleria jonë!</h4>  
 
 
-<header>
+<header class="filter">
    
 
        <div class="filteri">
