--- a/klasifikimi.html
+++ b/klasifikimi.html
@@ -15,7 +15,7 @@
     <script>
     $(function(){
         $(document).ready(function(){
-            // $(".lexomeshume").hide(); // e fshe tekstin pas clases lexo me shume
+            $(".lexomeshume").hide(); // e fshe tekstin pas clases lexo me shume
             $("#lexomeshume").on('click', function(2000){
                 $(".lexomeshume").toggle();
             });
