--- a/klasifikimi.html
+++ b/klasifikimi.html
@@ -11,13 +11,15 @@
 <body>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-     <script src="jquery-1.11.2.min.js"></script>
+     <script src="jquery-1.11.2.min.js"></script> 
+     <!-- skripta e dwl -->
 <!--     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>, 
+    linku i skriptes online -->
 <script>
-$(document).ready(function(){
-  $("button").click(function(){
-    $("p").toggle();
+$(function(){   //krijimi i funksiont
+  $("button").click(function(){ //thirrja ebutonit me nje prekje
+    $("p").toggle(); //shfaq/ fshe tekstin
   });
 });
 </script>
