--- a/dono.html
+++ b/dono.html
@@ -17,7 +17,7 @@
          
   $("#dono").click(function(){  //pas shtypjes se butonit dono
     $("#fshehe").slideToggle("slow"); // shfaqet teksti ngadal
-    $("button").css("display", "none"); //butoni zhduket
+    $("#dono").css("display", "none"); //butoni zhduket
 	
   });
  
