--- a/dono.html
+++ b/dono.html
@@ -23,7 +23,14 @@
  
 
 });
-   </script>
+
+          $(document).ready(function(){
+          $(".dergo").click(function(){
+         alert("Shuma qe do dononi eshte: " + $("#fname").val());
+       });
+});
+</script>
+ 
 
    <style>
       .donimi{
